# nek

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  appveyor.yml  nek.sln
nek/: allocator.hpp  any.hpp  iterator.hpp  nek.vcxproj  packages.config  type_traits.hpp  utility.hpp
nek/algorithm/: copy.hpp  copy_backward.hpp  equal.hpp  fill.hpp  fill_n.hpp  iter_swap.hpp  lexicographical_compare.hpp  max.hpp  min.hpp  move.hpp  reverse.hpp  rotate.hpp
nek/allocator/: allocator.hpp  allocator_traits.hpp
nek/any/: any.hpp  any_fwd.hpp  exception.hpp  is_any.hpp  traits.hpp
nek/container/: container_fwd.hpp  container_traits.hpp  function.hpp  vector.hpp
nek/detail/: construct.hpp  destroy.hpp
nek/iterator/: advance.hpp  begin.hpp  distance.hpp  end.hpp  iterator.hpp  iterator_traits.hpp  move_iterator.hpp  normal_iterator.hpp  range.hpp  reverse_iterator.hpp  tag.hpp
nek/math/: gcd.hpp
nek/mpl/: and.hpp  bool.hpp  bool_fwd.hpp  eval_if.hpp  identity.hpp  if.hpp  integral_c.hpp  integral_c_fwd.hpp  integral_c_tag.hpp  not.hpp  or.hpp
nek/type_traits/: add_const.hpp  add_cv.hpp  add_lvalue_reference.hpp  add_rvalue_reference.hpp  add_volatile.hpp  declval.hpp  enable_if.hpp  enabler.hpp  has_difference_type.hpp  has_element_type.hpp  has_iterator.hpp  has_pointer.hpp  has_type.hpp  has_value_type.hpp  is_byte.hpp  (+31 more)
nektest/: allocator_test.cpp  any_test.cpp  mpl_test.cpp  stdafx.cpp  stdafx.h  type_traits_test.cpp  unittest1.cpp  utility_test.cpp
test/: CMakeLists.txt  files.cmake  main.cpp  packages.config  pointer_traits_test.cpp  test.vcxproj
(+163 files in other folders)
